overflow fix

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -5,6 +5,7 @@
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
+  overflow: overlay;
 }
 
 @media (min-width: 500px) and (max-height: 400px) {
